--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/iMeetHTML.jpg" />
+    <link rel="icon" type="image/jpeg" href="/iMeetHTML.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ImeeT 2025</title>
   </head>
